tests/paczka1/fuzzy1/78559960.err
Error in line 1: S415 S448 54,5
Error in line 32: VphQC8yMJ A46 70,3
Error in line 24: Q79fOCC A46 91,2
